# Sistema-De-Monitoramento-de-Ativos

./: .gitignore  README.md  pyproject.toml
finance_dbt/: dbt_project.yml
finance_dbt/models/silver/: schema.yml
src/configs/rules/: rules.py
src/configs/tools/: snowflake.py
src/data_acquisition/: data_colletion.py  data_validation.py
src/utils/: handle_logs.py  logs_conversion.py
