[tool.poetry]
name = "portifolio mercado financeiro"
version = "0.1.0"
description = ""
authors = ["saulo-duarte <saulolduarte@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
