[tool.poetry]
name = "portifolio mercado financeiro"
version = "0.1.0"
description = ""
authors = ["saulo-duarte <saulolduarte@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
yfinance = "^0.2.42"
snowflake-connector-python = "^3.12.1"
snowflake-sqlalchemy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
